--- a/frontend/src/components/buttons/buttonstyles.module.css
+++ b/frontend/src/components/buttons/buttonstyles.module.css
@@ -28,3 +28,31 @@
   border-radius: 4px;
   border: solid 1px #0d0d0e;
 }
+
+.contactusred {
+  width: 9.5rem;
+  height: 3.5rem;
+  flex-grow: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  color: white;
+  background-color: rgba(228, 53, 60, 1);
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-size: 1.25rem;
+  transition: all .5s;
+}
+
+.contactusred:hover{
+  /* opacity: .8; */
+  background-color: rgb(233, 82, 87);
+}
+
+.contactusred:active{
+  background-color:  rgb(205, 28, 34);
+}
+
