--- a/frontend/src/components/buttons/buttonstyles.module.css
+++ b/frontend/src/components/buttons/buttonstyles.module.css
@@ -1,17 +1,19 @@
 .searchbuttonred {
-  width: 200px;
+  width: 270px;
+  height: 60px;
+  left: 587px;
+  top: 474px;
 
-  height: 40px;
+  background: #e53436;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
 
-  border-radius: 20px;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 22px;
+  text-align: center;
 
-  background-color: #fdbd39;
-
-  background-color: var(--light-orange);
-
-  box-shadow: 0 0 4px 0 #2f333a;
-
-  border: solid 2px rgba(255, 255, 255, 0.4);
+  color: #ffffff;
 }
 
 .contactuswhite {
@@ -41,18 +43,17 @@
   border: none;
   color: white;
   background-color: rgba(228, 53, 60, 1);
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 700;
   font-size: 1.25rem;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
-.contactusred:hover{
+.contactusred:hover {
   /* opacity: .8; */
   background-color: rgb(233, 82, 87);
 }
 
-.contactusred:active{
-  background-color:  rgb(205, 28, 34);
+.contactusred:active {
+  background-color: rgb(205, 28, 34);
 }
-
