--- a/frontend/src/components/buttons/buttonstyles.module.css
+++ b/frontend/src/components/buttons/buttonstyles.module.css
@@ -17,18 +17,21 @@
 }
 
 .contactuswhite {
-  width: 134px;
+  width: fit-content;
   height: 48px;
-  flex-grow: 0;
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 10px;
-  margin: 10px 0 9px 40.5px;
+  align-items: flex-end;
+  text-align: center;
+  color: #110f0f;
   padding: 12px 24px;
   border-radius: 4px;
-  border: solid 1px #0d0d0e;
+  border: solid 2px #0d0d0e;
+  background-color: #ffffff;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .contactusred {
