--- a/frontend/src/pages/properties/properties.module.css
+++ b/frontend/src/pages/properties/properties.module.css
@@ -1,6 +1,33 @@
 .outermostcontainer{
     height: fit-content;
     width: 100vw;
+    background-color:  #F5F5F5;
+    overflow-x: hidden;
+}
+
+.bannerbackground{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 448px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 -1rem;
+}
+
+.bannerbackground h2{
+    font-family: "DM Serif Display", sans-serif;
+    font-weight: 400;
+    font-size: 3.125rem;
+    color: rgba(0, 0, 0, 1);
+    text-align: center;
+    /* padding: 3.125rem 0; */
+
+}
+
+.section{
+    max-width: 100vw;
 }
 
 .featuredrentalssection{
@@ -8,11 +35,11 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
-    width: 100vw;
-    margin-top: 4rem;
+    width: 100%;
+    margin-top: 9rem;
     margin-bottom: 4rem;
 
-    border: 3px solid blue;
+    /* border: 3px solid blue; */
 }
 
 .featuredrentalstitle{
@@ -24,5 +51,5 @@
     font-size: 2.5rem;
     text-align: center;
 
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
