--- a/frontend/src/components/buttons/buttonstyles.module.css
+++ b/frontend/src/components/buttons/buttonstyles.module.css
@@ -1,9 +1,9 @@
 .searchbuttonred {
-  width: 270px;
+  width: fit-content;
   height: 60px;
   left: 587px;
   top: 474px;
-
+  padding: 10px 20px;
   background: #e53436;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 15px;
