--- a/frontend/src/components/listingcard/listingcard.module.css
+++ b/frontend/src/components/listingcard/listingcard.module.css
@@ -4,9 +4,51 @@
   background: #ffffff;
   box-shadow: 2px 4px 4px rgba(104, 105, 99, 0.5);
   border-radius: 6.42px;
+  font-family: "Inter";
+  font-style: normal;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  margin: 5% 2%;
 }
 
 .houseimg {
   max-width: 100%;
   max-height: 100%;
+  margin-bottom: 16px;
+}
+
+.listingcontent {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  margin-left: 20px;
+}
+
+.listingcard h4 {
+  margin: 0;
+  font-weight: 500;
+  font-size: 21.4141px;
+  line-height: 30px;
+}
+
+.listingcard h5 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
+  color: #4a60a1;
+  margin: 25px 0;
+}
+
+.housefeature {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.label {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #6d737a;
 }
