--- a/frontend/src/pages/homepage/sections/featured/featured.module.css
+++ b/frontend/src/pages/homepage/sections/featured/featured.module.css
@@ -26,7 +26,18 @@
   margin: 0;
 }
 
+.subsection {
+  position: absolute;
+  right: 15rem;
+  top: 1280px;
+}
+
+.subsection SearchButtonRed {
+  justify-self: flex-end;
+}
+
 .featuredcontainer {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
