--- a/frontend/src/pages/homepage/sections/homepageservices/homepageservices.module.css
+++ b/frontend/src/pages/homepage/sections/homepageservices/homepageservices.module.css
@@ -38,6 +38,8 @@
   margin-top: 26px;
 }
 
+/* service card css */
+
 .servicecard {
   display: flex;
   height: 400px;
@@ -45,13 +47,17 @@
   flex-direction: column;
   align-items: center;
   background: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 24px 68px 0 rgba(0, 0, 0, 0.08);
+  box-shadow: 2px 24px 68px rgba(59, 77, 129, 0.08);
+  border-radius: 4px;
   font-family: "Inter";
   font-style: normal;
   text-align: center;
   justify-content: space-evenly;
   margin: 0 2%;
+}
+
+.servicecard:hover {
+  background: #f1cbcc;
 }
 
 .servicecard h5 {
