--- a/frontend/src/components/searchcontainer/searchcontainer.module.css
+++ b/frontend/src/components/searchcontainer/searchcontainer.module.css
@@ -95,10 +95,10 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     transition: all .5s;
+    cursor: pointer;
 }
 
 .searchbutton:hover {
-    /* opacity: .8; */
     background-color: rgb(233, 82, 87);
   }
   
