--- a/frontend/src/pages/properties/properties.module.css
+++ b/frontend/src/pages/properties/properties.module.css
@@ -3,6 +3,11 @@
     width: 100vw;
     background-color:  #F5F5F5;
     overflow-x: hidden;
+
+    background-repeat: no-repeat;
+    
+    
+    /* background-position: 0 -1rem; */
 }
 
 .bannerbackground{
