--- a/frontend/src/components/listingcard/listingcard.module.css
+++ b/frontend/src/components/listingcard/listingcard.module.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   align-content: flex-start;
-  margin-left: 20px;
+  margin: 0 20px;
 }
 
 .listingcard h4 {
