--- a/frontend/src/pages/properties/properties.module.css
+++ b/frontend/src/pages/properties/properties.module.css
@@ -27,7 +27,7 @@
     font-size: 3.125rem;
     color: rgba(0, 0, 0, 1);
     text-align: center; 
-    /* padding: 3.125rem 0; */
+    padding: 3.125rem 0;
 
 }
 
