--- a/frontend/src/components/searchcontainer/searchcontainer.module.css
+++ b/frontend/src/components/searchcontainer/searchcontainer.module.css
@@ -10,6 +10,9 @@
     font-weight: 400;
     color: rgba(16, 14, 15, 1);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    z-index: 1;
+
+    /* border: 3px solid yellowgreen; */
 }
 
 .outermostcontainer select{
@@ -110,7 +113,6 @@
     display: flex;
     justify-content: space-between;
     width: 60%;
-
 }
 
 .checkboxcolumn{
@@ -128,21 +130,14 @@
     height: 1.15rem;
     width: 1.15rem;
     
-    
-    /* border-radius: .2rem; 
-    -moz-appearance:none;
-    -webkit-appearance:none;
-    -o-appearance:none; */
-
-    /* border: 2px solid rgba(203, 210, 224, 1); */
-}
-
-/* .checkboxcolumn input:focus{
-    background-color: rgb(233, 82, 87);
-} */
+} 
 
 .checkboxcolumn span{
     display: flex;
     gap: .5rem;
+}
+
+.checkboxcolor{
+    accent-color: #E53436;
 }
 
