--- a/frontend/src/pages/properties/properties.module.css
+++ b/frontend/src/pages/properties/properties.module.css
@@ -5,9 +5,8 @@
     overflow-x: hidden;
 
     background-repeat: no-repeat;
+    /* border: 5px solid goldenrod; */
     
-    
-    /* background-position: 0 -1rem; */
 }
 
 .bannerbackground{
@@ -19,6 +18,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 -1rem;
+    z-index: -100;
+
+    /* border: 6px solid maroon; */
+
+    
 }
 
 .bannerbackground h2{
@@ -29,52 +33,14 @@
     text-align: center; 
     padding: 3.125rem 0;
 
+    /* border: 3px solid purple; */
 }
 
-.section{
-    max-width: 100vw;
-}
 
-.featuredrentalssection{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.containerforlistings{
+    width: 100vw;
     height: 100%;
-    width: 100%;
-    margin-top: 9rem;
-    margin-bottom: 4rem;
-
-    /* border: 3px solid blue; */
+    z-index: -1;
 }
-
-.noresultsreturned{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Inter, sans-serif;
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-top: 5rem;
-    padding-bottom: 10rem;
-}
-
-.noresultsreturned img{
-    height: 15rem;
-    margin-bottom: 1.5rem;
-    /* border: 2px solid blue; */
-}
-
-.featuredrentalstitle{
-    width: 33rem;
-    padding-top: 1rem;
-    padding-bottom: 3rem;
-    border-top: 3px solid rgba(0, 0, 0, 1);
-    font-family: 'DM Serif Display', serif;
-    font-size: 2.5rem;
-    text-align: center;
-
-    /* border: 2px solid red; */
-}
-
 
 
