--- a/frontend/src/components/listingcard/listingcard.module.css
+++ b/frontend/src/components/listingcard/listingcard.module.css
@@ -11,7 +11,7 @@
   align-content: center;
   margin: 5% 2%;
   text-decoration: none;
-  transition: box-shadow .5s;
+  transition: box-shadow 0.5s;
 }
 
 .listingcard:hover {
@@ -30,6 +30,7 @@
   flex-direction: column;
   align-content: flex-start;
   margin: 0 20px;
+  text-align: start;
 }
 
 .listingcard h4 {
