--- a/frontend/src/pages/homepage/sections/featured/featured.module.css
+++ b/frontend/src/pages/homepage/sections/featured/featured.module.css
@@ -1,4 +1,4 @@
-.featuredheader {
+.featured {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,38 +6,20 @@
   text-align: center;
 }
 
-.featuredheader h3 {
-  font-family: "DM Serif Display";
-  font-weight: 400;
-  font-size: 40px;
-  line-height: 48px;
-  color: #1e2640;
-  margin: 0;
-}
-
-.featuredheader p {
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 28px;
-  color: #889099;
-  width: 696px;
-  height: 56px;
-  margin: 0;
-}
-
 .subsection {
   position: absolute;
   /* right: 15rem;
   top: 1280px; */
-  top: 80rem;
-  left: 75%;
+  top: 85rem;
+  left: 69%;
 }
 
-.subsection SearchButtonRed {
-  justify-self: flex-end;
+.featuredmaincontainer {
+  display: flex;
+  flex-direction: column;
 }
 
-.featuredcontainer {
+.featuredsubcontainer {
   display: flex;
   flex-direction: row;
   justify-content: center;
