--- a/frontend/src/components/navbar/navbar.module.css
+++ b/frontend/src/components/navbar/navbar.module.css
@@ -101,8 +101,11 @@
   display: flex;
   align-items: center;
   text-align: center;
+  text-decoration: none;
 }
 
 .subnav_content_item:hover {
   background: #f1cbcc;
+  text-decoration: none;
+  color: #000000;
 }
