--- a/frontend/src/components/buttons/buttonstyles.module.css
+++ b/frontend/src/components/buttons/buttonstyles.module.css
@@ -60,3 +60,60 @@
 .contactusred:active {
   background-color: rgb(205, 28, 34);
 }
+
+
+/* LISTING MAIN FEATURES BLUE */
+.bluefeaturesbtncontainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: .7rem;
+  width: 12rem;
+  min-width: fit-content;
+  height: 2.75rem;
+  border-radius: 1rem;
+  background-color: rgb(45, 114, 143);
+  color: white;
+  font-family: Inter, sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  white-space: nowrap;
+  padding: 0 2rem;
+  user-select: none;
+}
+
+.bluefeaturesbtncontainer img{
+  max-height: 1.3rem;
+}
+
+/* LISTING PROMPT RED */
+.redoutlinebtncontainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  min-width: fit-content;
+  height: 3.8rem;
+  margin: 1.4rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  font-family: Inter, sans-serif;
+  font-weight: 600;
+  font-size: 1.25rem;
+  background-color: white;
+  border: 3px solid rgb(229, 52, 54);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  cursor: pointer;
+  user-select: none;
+  transition: all .5s;
+  
+}
+
+.redoutlinebtncontainer:hover{
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 15px -3px, rgba(0, 0, 0, 0.2) 0px 4px 6px -2px;
+}
+
+.redoutlinebtncontainer:active{
+  background-color: #ebebeb;
+}
