--- a/frontend/src/pages/individuallisting/individuallisting.module.css
+++ b/frontend/src/pages/individuallisting/individuallisting.module.css
@@ -21,7 +21,7 @@
     cursor: pointer;
 
 
-    border: 2px solid orange;
+    /* border: 2px solid orange; */
 }
 
 .backbutton p{
@@ -44,18 +44,21 @@
 .propertyinfosectionoutercontainer{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     align-items: center;
     width: 100%;
     margin-top: 2rem;
+    margin-left: 5rem;
+    margin-left: 0;
 
-    border: 2px solid orchid;
+    /* border: 2px solid orchid; */
 }
 
 .propertyinfosectioninnercontainer{
     width: 90%;
     max-width: 2000px;
 
-    border: 2px solid blueviolet;
+    /* border: 2px solid blueviolet; */
 }
 
 .listedon{
@@ -87,7 +90,11 @@
 }
 
 .textinfo p {
-    
+    font-family: Inter, sans-serif;
+    font-size: 1.25rem;
+    font-weight: 400;
+    width: 90rem;
+    /* border: 2px solid purple; */
 }
 
 .featurebtns{
@@ -106,9 +113,6 @@
     margin-bottom: 2.5rem;
 }
 
-.listitem{
-    
-}
 
 /* ---------------- aside section --------------- */
 .aside h1{
@@ -123,4 +127,37 @@
    /* border: 2px solid yellowgreen; */
 
 
+}
+
+/* ---------------- map section --------------- */
+.mapsection{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    margin-top: 4rem;
+    margin-bottom: 5rem;
+
+    /* border: 3px solid blue; */
+}
+
+
+
+.maptitle{
+    width: 33rem;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+    border-top: 3px solid rgba(0, 0, 0, 1);
+    font-family: 'DM Serif Display', serif;
+    font-size: 2.5rem;
+    text-align: center;
+    color:rgb(30, 38, 64);
+
+    /* border: 2px solid red; */
+}
+
+.mapsection img{
+    width: 90%;
+    max-width: 2000px;
 }
