--- a/frontend/src/components/featuredrentalcardlrg/featuredrentalcardlrg.module.css
+++ b/frontend/src/components/featuredrentalcardlrg/featuredrentalcardlrg.module.css
@@ -1,3 +1,10 @@
+.linkcontainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
 .outermostcontainer {
   display: flex;
   position: relative;
