--- a/frontend/src/components/featured/featured.module.css
+++ b/frontend/src/components/featured/featured.module.css
@@ -4,14 +4,15 @@
   align-items: center;
   font-style: normal;
   text-align: center;
+  position: relative;
 }
 
 .subsection {
   position: absolute;
-  /* right: 15rem;
-  top: 1280px; */
-  top: 85rem;
-  left: 69%;
+  top: 10rem;
+  right: 22rem;
+  margin: 0;
+  width: 15rem;
 }
 
 .featuredmaincontainer {
@@ -23,4 +24,5 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 0;
 }
