--- a/frontend/src/pages/individuallisting/imageslidercomponent.module.css
+++ b/frontend/src/pages/individuallisting/imageslidercomponent.module.css
@@ -1,7 +1,20 @@
 .outermostcontainer {
-  height: 50rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.outermostcontainer button {
-  background-color: none;
+.flex_row {
+  justify-content: center;
+  display: flex;
+  padding-top: 20px;
+}
+
+.thumbnail img {
+  border: 1px solid #000000;
+  border-radius: 15px;
+}
+
+#clicked {
+  border: 5px solid black;
 }
