--- a/frontend/src/components/featured/featured.module.css
+++ b/frontend/src/components/featured/featured.module.css
@@ -10,9 +10,8 @@
 .subsection {
   position: absolute;
   top: 10rem;
-  right: 22rem;
+  right: 430px;
   margin: 0;
-  width: 15rem;
 }
 
 .featuredmaincontainer {
