--- a/frontend/src/pages/individuallisting/imageslidercomponent.module.css
+++ b/frontend/src/pages/individuallisting/imageslidercomponent.module.css
@@ -4,6 +4,11 @@
   align-items: center;
 }
 
+.outermostcontainer img {
+  box-shadow: 1px 1px 1px #000000;
+  border-radius: 15px;
+}
+
 .flex_row {
   justify-content: center;
   display: flex;
@@ -15,10 +20,18 @@
 }
 
 .thumbnail img {
-  border: 1px solid #000000;
   border-radius: 15px;
+  box-shadow: 1px 1px 1px #000000;
 }
 
-#clicked {
-  border: 5px solid black;
+.thumbnail img:hover {
+  scale: 1.1;
+  margin: 0 1rem;
+  transition: 0.5s;
+}
+
+.clicked {
+  scale: 1.1;
+  margin: 0 1rem;
+  border: 1px solid #686963;
 }
