--- a/frontend/src/pages/whyrent/sections/rentalsonmap/rentalsonmap.module.css
+++ b/frontend/src/pages/whyrent/sections/rentalsonmap/rentalsonmap.module.css
@@ -2,4 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 40px 0;
+}
+.container img {
+  margin: 10px 0;
+}
+
+.container img:hover {
+  scale: 1.02;
+  transition: 0.5s;
 }
