--- a/frontend/src/components/featured/featured.module.css
+++ b/frontend/src/components/featured/featured.module.css
@@ -9,9 +9,13 @@
 
 .subsection {
   position: absolute;
-  top: 10rem;
-  right: 430px;
-  margin: 0;
+  left: 69%;
+  top: 130px;
+}
+
+.searchbutton {
+  align-self: flex-end;
+  justify-content: flex-end;
 }
 
 .featuredmaincontainer {
@@ -23,5 +27,5 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin: 0;
+  margin: 0 0;
 }
