--- a/frontend/src/pages/homepage/sections/homepageservices/homepageservices.module.css
+++ b/frontend/src/pages/homepage/sections/homepageservices/homepageservices.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 2%;
 }
 
 .servicecontainer {
@@ -35,7 +36,7 @@
 .cardcontainer {
   display: flex;
   flex-direction: row;
-  margin-top: 26px;
+  margin: 3% 0;
 }
 
 /* service card css */
