--- a/frontend/src/pages/individuallisting/imageslidercomponent.module.css
+++ b/frontend/src/pages/individuallisting/imageslidercomponent.module.css
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
+  padding: 2rem 0;
+  box-shadow:  0px -10px 16px -16px #222, 0px 10px 16px -16px #222 ;
 }
 
 .outermostcontainer img {
