--- a/frontend/src/components/listingcard/listingcard.module.css
+++ b/frontend/src/components/listingcard/listingcard.module.css
@@ -11,12 +11,12 @@
   align-content: center;
   margin: 3% 2%;
   text-decoration: none;
-  transition: box-shadow 0.5s;
+  transition: all 0.5s;
 }
 
 .listingcard:hover {
   box-shadow: 2px 4px 4px #a95253;
-  scale: 1.1;
+  scale: 1.05;
   transition: 0.5s;
 }
 
